HLS v4 (#57)
Ship competent HTTP Live Stream #180419462
* Ship audio to a StreamEncoder class
* ffmpeg process should not stop after any number of media segments